plugins {
    id 'java'
    id 'application'
}

group 'window'
version '1.0'

mainClassName = "controller.Main"

dependencies {
    compileOnly 'org.projectlombok:lombok:1.18.22'
    annotationProcessor 'org.projectlombok:lombok:1.18.22'


    implementation group: 'commons-io', name: 'commons-io', version: '2.6'
    compileOnly group: 'commons-io', name: 'commons-io', version: '2.6'
    implementation 'org.json:json:20171018'
    compileOnly 'org.json:json:20171018'
    implementation project(':common')
    compileOnly project(':common')
    implementation project(':connector')
    compileOnly project(':connector')
}

repositories {
    mavenCentral()
}

jar {

    manifest.attributes("Main-Class": "mainClassName");
}

sourceCompatibility = JavaVersion.VERSION_17
targetCompatibility = JavaVersion.VERSION_17